--- a/src/index.html
+++ b/src/index.html
@@ -13,9 +13,10 @@
   <link rel="preconnect" href="https://fonts.gstatic.com">
  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBDl3290lOEG_WUo66K6HzCfd-rO36-Poc" 
- type="text/javascript">
+ <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBDl3290lOEG_WUo66K6HzCfd-rO36-Poc" type="text/javascript">
 </script>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBDl3290lOEG_WUo66K6HzCfd-rO36-Poc&libraries=places&language=he"></script>
+
 </head>
 <body class="mat-typography">
   <app-root></app-root>
