--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBDl3290lOEG_WUo66K6HzCfd-rO36-Poc" type="text/javascript">
 </script>
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBDl3290lOEG_WUo66K6HzCfd-rO36-Poc&libraries=places&language=he"></script>
+<!--<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBDl3290lOEG_WUo66K6HzCfd-rO36-Poc&libraries=places&language=he"></script>-->
 
 </head>
 <body class="mat-typography">
